<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingRight="12dp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="6dip"
        android:fadingEdge="none"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_height="wrap_content"
            android:padding="6dip"
            android:layout_width="fill_parent">

            <TextView
                style="?android:textAppearanceMedium"
                android:id="@+id/e3KeyUploadHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/e3_key_upload_intro" />

            <LinearLayout
                android:id="@+id/e3KeyUploadMsgInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    style="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e3_key_upload_destined_for"
                    />

                <TextView
                    android:id="@+id/e3KeyUploadAddress"
                    style="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:fontFamily="monospace"
                    tools:text="look@my.amazin.horse"
                    />

                <TextView
                    android:id="@+id/e3KeyUploadFolder"
                    style="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:fontFamily="monospace"
                    tools:text="Inbox"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/e3KeyUploadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/e3_key_upload_button"
                />

            <LinearLayout
                android:id="@+id/e3KeyUploadLayoutGenerating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <com.fsck.k9.view.StatusIndicator
                    android:id="@+id/e3KeyUploadProgressGenerating"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    />

                <TextView
                    style="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/e3_key_upload_generating"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/e3KeyUploadLayoutUploading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <com.fsck.k9.view.StatusIndicator
                    android:id="@+id/e3KeyUploadProgressUploading"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="?android:textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/e3_key_upload_uploading_to"
                        />

                    <TextView
                        android:id="@+id/e3KeyUploadAddress2"
                        style="?android:textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:fontFamily="monospace"
                        tools:text="look@my.amazin.horse"
                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/e3KeyUploadLayoutFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <com.fsck.k9.view.StatusIndicator
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    />

                <TextView
                    style="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/e3_key_upload_finish"
                    />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/e3KeyUploadLayoutVerification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e3_key_upload_verification"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/e3KeyUploadLayoutVerificationPhrase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/e3KeyVerificationPhrase"
                    style="?android:textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    app:fontFamily="monospace"
                    tools:text=""
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/e3KeyUploadLayoutVerificationInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e3_key_upload_verification_instructions"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/e3KeyUploadLayoutQrCodeInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e3_key_upload_qr_code_instructions"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/e3KeyUploadLayoutQrCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/e3KeyQrCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/e3_key_upload_qr_code_desc"/>

            </LinearLayout>

            <TextView
                android:id="@+id/e3KeyUploadErrorUpload"
                style="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e3_key_upload_error_send"
                tools:visibility="gone"
                />
            ]</LinearLayout>

    </ScrollView>
    <include layout="@layout/wizard_cancel" />
</LinearLayout>